--- a/app/src/main/res/layout/fragment_bind_camera.xml
+++ b/app/src/main/res/layout/fragment_bind_camera.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,13 +11,16 @@
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_gary" />
 
     <TextView
         android:id="@+id/tv_main_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/fLayout_toolbar"
+        android:layout_below="@+id/custom_toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y20"
         android:gravity="center"
@@ -97,6 +101,5 @@
     <FrameLayout
         android:id="@+id/fLayout_bind_device_list_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/fLayout_toolbar" />
+        android:layout_height="match_parent" />
 </RelativeLayout>
