--- a/app/src/main/res/layout/fragment_bind_device_list.xml
+++ b/app/src/main/res/layout/fragment_bind_device_list.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +11,11 @@
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_gary" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/y48"
@@ -21,8 +26,8 @@
         android:textSize="@dimen/sp22" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="@dimen/y44"
         android:id="@+id/rv_to_bind_device_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/y44" />
 </LinearLayout>
