--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -13,7 +13,10 @@
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_gary" />
 
     <ViewSwitcher
         android:id="@+id/vs_layout_switch"
