--- a/app/src/main/res/layout/fragment_video_auto_record.xml
+++ b/app/src/main/res/layout/fragment_video_auto_record.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title="@string/SETTING_RECORD"
         hunt:ct_left_title_color="@color/color_white"
