--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -1,89 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:clickable="true"
     android:background="@color/color_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- 顶部栏 -->
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+
+        <!-- 顶部栏 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/fLayout_top_bar_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/color_0ba8cf">
+
+                <TextView
+                    android:id="@+id/imgV_top_bar_center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/y48"
+                    android:drawableLeft="@drawable/nav_tab_back_selector"
+                    android:drawablePadding="@dimen/x15"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/x15"
+                    android:text="固件升级"
+                    android:textColor="@color/color_white"
+                    android:textSize="@dimen/sp18" />
+            </FrameLayout>
+        </LinearLayout>
 
         <FrameLayout
-            android:id="@+id/fLayout_top_bar_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_0ba8cf">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/imgV_top_bar_center"
+                style="@style/information_item"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:drawableLeft="@drawable/nav_tab_back_selector"
-                android:drawablePadding="@dimen/x15"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/x15"
-                android:text="固件升级"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/y12"
+                android:text="设备"
+                android:textColor="#4B9FD5"
+                android:textSize="@dimen/sp14" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y10"
+                android:background="@drawable/little_shape" />
         </FrameLayout>
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <TextView
-            style="@style/information_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y12"
-            android:text="设备"
-            android:textColor="#4B9FD5"
-            android:textSize="@dimen/sp14" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y10"
-            android:background="@drawable/little_shape" />
-    </FrameLayout>
-
-    <TextView
-        android:text="当前版本"
-        style="@style/information_item"
-        android:layout_marginTop="@dimen/y12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/sp16" />
-
-    <TextView
-        android:id="@+id/tv_sdcard_volume"
-        style="@style/information_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y6"
-        android:text="3.0.0.0"
-        android:textColor="#8c8c8c"
-        android:textSize="@dimen/sp14" />
-
-    <View
-        android:layout_marginTop="@dimen/y10"
-        android:background="@color/color_f2f2f2"
-        android:layout_marginLeft="@dimen/x16"
-        android:layout_marginRight="@dimen/x16"
-        android:layout_width="match_parent"
-        android:layout_height="1dip"/>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_hardware_update_title"
-            android:text="最新版本"
+            android:text="当前版本"
             style="@style/information_item"
             android:layout_marginTop="@dimen/y12"
             android:layout_width="wrap_content"
@@ -91,38 +64,108 @@
             android:textSize="@dimen/sp16" />
 
         <TextView
-            android:layout_below="@id/tv_hardware_update_title"
+            android:id="@+id/tv_hardware_now_version"
             style="@style/information_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y6"
-            android:text="3.0.0.1"
+            android:text="3.0.0.0"
             android:textColor="#8c8c8c"
             android:textSize="@dimen/sp14" />
 
         <View
-            android:layout_marginRight="@dimen/x20"
-            android:id="@+id/hardware_update_point"
-            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/y10"
+            android:background="@color/color_f2f2f2"
+            android:layout_marginLeft="@dimen/x16"
+            android:layout_marginRight="@dimen/x16"
+            android:layout_width="match_parent"
+            android:layout_height="1dip"/>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_hardware_update_title"
+                android:text="最新版本"
+                style="@style/information_item"
+                android:layout_marginTop="@dimen/y12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp16" />
+
+            <TextView
+                android:id="@+id/tv_hardware_new_version"
+                android:layout_below="@id/tv_hardware_update_title"
+                style="@style/information_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/y6"
+                android:text="3.0.0.1"
+                android:textColor="#8c8c8c"
+                android:textSize="@dimen/sp14" />
+
+            <View
+                android:layout_marginRight="@dimen/x20"
+                android:id="@+id/hardware_update_point"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/hardware_update_point"
+                android:layout_width="@dimen/x7"
+                android:layout_height="@dimen/y7"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_download_soft_file"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y42"
+            android:gravity="center"
             android:layout_centerVertical="true"
-            android:background="@drawable/hardware_update_point"
-            android:layout_width="@dimen/x7"
-            android:layout_height="@dimen/y7"/>
-    </RelativeLayout>
+            android:padding="@dimen/x10"
+            android:text="下载并升级(3.6MB)"
+            android:layout_marginTop="@dimen/y69"
+            android:layout_marginEnd="@dimen/x30"
+            android:layout_marginStart="@dimen/x30"
+            android:background="@drawable/long_btn_bg_shape_white"
+            android:textColor="#4B9FD5"
+            android:textSize="@dimen/sp16" />
 
-    <TextView
-        android:id="@+id/tv_clecr_sdcard"
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_download_pg_container"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y42"
-        android:gravity="center"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/x10"
-        android:text="升级"
-        android:layout_marginTop="@dimen/y69"
-        android:layout_marginEnd="@dimen/x30"
-        android:layout_marginStart="@dimen/x30"
-        android:background="@drawable/long_btn_bg_shape_white"
-        android:textColor="#4B9FD5"
-        android:textSize="@dimen/sp16" />
+        android:layout_height="@dimen/y64">
 
-</LinearLayout>
+        <View
+            android:background="@color/color_e1e1e1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"/>
+
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/y19"
+            android:text="3.5MB/34MB"
+            android:textSize="@dimen/sp13"
+            android:textColor="@color/color_8c8c8c"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ProgressBar
+            android:layout_marginBottom="@dimen/y19"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/y9"
+            android:id="@+id/download_progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="@dimen/x319"
+            android:layout_height="5dp"
+            android:indeterminateOnly="false"
+            android:progress="30"
+            android:max="100"
+            android:progressDrawable="@drawable/download_drawable_color" />
+    </LinearLayout>
+
+</RelativeLayout>
