--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -17,7 +17,7 @@
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/rLayout_login_top"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y48"
+        android:layout_height="wrap_content"
         hunt:ct_icon="@drawable/login_btn_close"
         hunt:ct_title="@string/LOGIN"
         hunt:ct_title_color="@color/color_black" />
