--- a/app/src/main/res/layout/cam_live_port_handle_bar.xml
+++ b/app/src/main/res/layout/cam_live_port_handle_bar.xml
@@ -2,9 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fLayout_live_port_bottom_control_bar"
     android:layout_width="match_parent"
-    android:background="@drawable/camera_sahdow"
     android:layout_height="@dimen/y39"
-    android:layout_gravity="bottom">
+    android:layout_gravity="bottom"
+    android:background="@drawable/camera_sahdow">
 
     <com.cylan.jiafeigou.widget.flip.FlipLayout
         android:id="@+id/lLayout_protection"
@@ -20,13 +20,30 @@
         android:layout_gravity="center"
         android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/imgV_cam_zoom_to_full_screen"
-        style="@style/ripple_background"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:paddingLeft="@dimen/x15"
-        android:paddingRight="@dimen/x15"
-        android:src="@drawable/icon_live_zoom_full_screen" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imv_double_sight"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="@dimen/x15"
+            android:paddingRight="@dimen/x15"
+            android:src="@drawable/cam_to_double_sight"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/imgV_cam_zoom_to_full_screen"
+            style="@style/ripple_background"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/x15"
+            android:paddingRight="@dimen/x15"
+            android:src="@drawable/icon_live_zoom_full_screen" />
+    </LinearLayout>
+
 </FrameLayout>
